syntax = "proto3";

package Protocol;

import "client.proto";
import "server.proto";
import "struct.proto";
import "enum.proto";

message C2B_InitialPacket
{
    C2S_Metadata meta = 1;
    uint32 roomId = 2;
    string nickname = 3;
}

message B2C_EnterRoom
{
    S2C_Metadata meta = 1;
}

message B2C_GameStart
{
   bool isStart = 1;
}

message C2B_Move
{
    PosInfo posInfo = 1;
	ObjectType objectType = 2; //CREATURE, PROJECTILE;
    uint32 roomId = 3;
}

message B2C_Move
{
    PosInfo posInfo = 1;
	ObjectType objectType = 2; //CREATURE, PROJECTILE; 
}