syntax = "proto3";

package common;

// 공통 패킷 구조
message Packet {
  string userId = 1;         // 유저 ID (UUID, 16바이트)
  string clientVersion = 2;  // 클라이언트 버전 (문자열)
  uint32 sequence = 3;       // 유저의 호출 수 (42억)
  bytes payload = 4;         // 실제 데이터
}